# mongodb-python-hackpack

./: README.md  pyproject.toml
app/: main.py  mongodb.py
